Fix probe content type detection on Ubuntu 24.04 LTS (#921)
* Fix pull request

* Fix pull request

* Fix pull request